--- a/appconfig/config.json
+++ b/appconfig/config.json
@@ -1,1 +1,1 @@
-{"home":{"city":"Orlando","state":"FL","latitude":"28.5383","longitude":"81.3792"}}
+{"home":{"city":"Dallas","state":"TX","latitude":"32.7767","longitude":"96.7970"}}
